--- a/HairSalon/Views/Shared/_Nav.cshtml
+++ b/HairSalon/Views/Shared/_Nav.cshtml
@@ -7,13 +7,13 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="/">App Name</a>
+              <a class="navbar-brand" href="/">Snappy Snips</a>
           </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="#">Item 1</a></li>
-                <li><a href="#">Item 2</a></li>
-                <li><a href="#">Item 3</a></li>
+                <li><a href="/stylists">Stylists</a></li>
+                <li><a href="/specialties">Specialties</a></li>
+                <li><a href="/clients">Clients</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <li><a href="#">Item 4</a></li>
