--- a/HairSalon/wwwroot/css/styles.css
+++ b/HairSalon/wwwroot/css/styles.css
@@ -1,3 +1,8 @@
+.container {
+    width: 70%;
+    max-width: 800px;
+}
+
 .grid-container {
     display: grid;
     grid-template-columns: 2fr 1fr 1fr 1fr;
