--- a/HairSalon/wwwroot/css/styles.css
+++ b/HairSalon/wwwroot/css/styles.css
@@ -3,6 +3,14 @@
     max-width: 800px;
 }
 
+h1 {
+    margin: 30px 0px;
+}
+
+h4 {
+    margin: 30px 0px;
+}
+
 .grid-container {
     display: grid;
     grid-template-columns: 2fr 1fr 1fr 1fr;
@@ -16,4 +24,15 @@
     background-color: rgba(255, 255, 255, 0.8);
     text-align: left;
     padding: 10px
+}
+
+.no-btn-styles {
+    border: none;
+    background-color: none;
+    color: #337ab7;
+}
+
+.no-btn-styles:hover {
+    color: #23527c;
+    text-decoration: underline;
 }
