Add back buttons

--- a/HairSalon/Views/Stylists/Create.cshtml
+++ b/HairSalon/Views/Stylists/Create.cshtml
@@ -26,5 +26,6 @@
             <span asp-validation-for="Phone" class="text-danger"></span>
         </div>
         <button type="submit" class="btn btn-lg btn-info">Create Stylist</button>
+        <a href="/stylists" class="btn btn-lg btn-info">Back</a>
     }
 </div>
