--- a/HairSalon/Views/Stylists/Details.cshtml
+++ b/HairSalon/Views/Stylists/Details.cshtml
@@ -14,3 +14,6 @@
     <ul>
         <!-- <li>Add clients here</li> -->
     </ul>
+    <hr />
+    <a href="/stylists" class="btn btn-lg btn-info">Back</a>
+</div>
