--- a/HairSalon/Views/Stylists/Edit.cshtml
+++ b/HairSalon/Views/Stylists/Edit.cshtml
@@ -27,5 +27,6 @@
             <span asp-validation-for="Phone" class="text-danger"></span>
         </div>
         <button type="submit" class="btn btn-lg btn-info">Update Stylist</button>
+        <a href="/stylists" class="btn btn-lg btn-info">Back</a>
     }
 </div>
