--- a/HairSalon/Views/Stylists/Index.cshtml
+++ b/HairSalon/Views/Stylists/Index.cshtml
@@ -17,7 +17,7 @@
                     @Html.DisplayFor(modelItem => stylist.FirstName) 
                     @Html.DisplayFor(modelItem => stylist.LastName)
                 </div>
-                <div class="grid-item">@Html.ActionLink("Details", "Details", new { id = stylist.StylistId })</div>
+                <div class="grid-item">@Html.ActionLink("Details", "Show", new { id = stylist.StylistId })</div>
                 <div class="grid-item">@Html.ActionLink("Edit", "Edit", new { id = stylist.StylistId })</div>
                 <div class="grid-item">
                     @using (Html.BeginForm("delete", "stylists", new { id = stylist.StylistId }, FormMethod.Post))
