--- a/HairSalon/Views/Clients/Index.cshtml
+++ b/HairSalon/Views/Clients/Index.cshtml
@@ -14,6 +14,7 @@
             @foreach(var client in Model)
             {
                 <div class="grid-item">
+                    <img src="/img/client-icon.png" class="stylist-icon">
                     @Html.DisplayFor(modelItem => client.FirstName) 
                     @Html.DisplayFor(modelItem => client.LastName)
                 </div>
