--- a/HairSalon/Views/Stylists/Index.cshtml
+++ b/HairSalon/Views/Stylists/Index.cshtml
@@ -14,6 +14,7 @@
             @foreach(var stylist in Model)
             {
                 <div class="grid-item">
+                    <img src="/img/stylist-icon.svg" class="stylist-icon">
                     @Html.DisplayFor(modelItem => stylist.FirstName) 
                     @Html.DisplayFor(modelItem => stylist.LastName)
                 </div>
