--- a/HairSalon/wwwroot/css/styles.css
+++ b/HairSalon/wwwroot/css/styles.css
@@ -41,7 +41,12 @@ h1 {
     margin: 20px -20px;
 }
 
-.icon-thumb {
+.client-icon {
     width: 30px;
+    margin-right: 20px;
+}
+
+.stylist-icon {
+    width: 20px;
     margin-right: 20px;
 }
