Adjust stylists controller and views for many-to-many relationship

--- a/HairSalon/Views/Stylists/Create.cshtml
+++ b/HairSalon/Views/Stylists/Create.cshtml
@@ -25,6 +25,13 @@
             @Html.TextBoxFor(model => model.Phone, new { @class = "form-control", required = "true" })
             <span asp-validation-for="Phone" class="text-danger"></span>
         </div>
+        if (ViewBag.SpecialtyIds.Count != 0)
+        {
+            <div class="form-group">
+                <label for="SpecialtyIds"><h4>Specialties:</h4></label>
+                @Html.DropDownList("SpecialtyIds", null, new { multiple = "true", @class = "form-control" })
+            </div>
+        }
         <button type="submit" class="btn btn-lg btn-info">Create Stylist</button>
         <a href="/stylists" class="btn btn-lg btn-info">Back</a>
     }
