--- a/HairSalon/Views/Stylists/Edit.cshtml
+++ b/HairSalon/Views/Stylists/Edit.cshtml
@@ -26,6 +26,13 @@
             @Html.TextBoxFor(model => model.Phone, new { @class = "form-control", required = "true" })
             <span asp-validation-for="Phone" class="text-danger"></span>
         </div>
+        if (ViewBag.SpecialtyIds.Count != 0)
+        {
+            <div class="form-group">
+                <label for="SpecialtyIds"><h4>Stylists:</h4></label>
+                @Html.DropDownList("SpecialtyIds", null, new { multiple = "true", @class = "form-control" })
+            </div>
+        }
         <button type="submit" class="btn btn-lg btn-info">Update Stylist</button>
         <a href="/stylists" class="btn btn-lg btn-info">Back</a>
     }
