--- a/HairSalon/Views/Specialties/Show.cshtml
+++ b/HairSalon/Views/Specialties/Show.cshtml
@@ -8,13 +8,20 @@
 
 <div class="container">
     <h3>@Model.Name</h3>
-    <p>Stylists With Specialty: </p>
-    <ul class="salon-list">
-        @foreach (var stylist in ViewBag.StylistList)
-        {
-            <li><img src="/img/stylist-icon.svg" class="stylist-icon"><a href="/stylists/@stylist.StylistId">@stylist.FirstName @stylist.LastName</a></li>
-        }
-    </ul>
+    @if (ViewBag.StylistList.Count == 0)
+    {
+        <p>There are currently no stylists with this specialty.</p>
+    }
+    else
+    {
+        <p>Stylists With Specialty: </p>
+        <ul class="salon-list">
+            @foreach (var stylist in ViewBag.StylistList)
+            {
+                <li><img src="/img/stylist-icon.svg" class="stylist-icon"><a href="/stylists/@stylist.StylistId">@stylist.FirstName @stylist.LastName</a></li>
+            }
+        </ul>
+    }
     <hr />
     <a href="/specialties" class="btn btn-lg btn-info">Back</a>
 </div>
