--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -3,5 +3,6 @@
 }
 
   <div class='container'>
-    <h1>Sample index page</h1>
+    <h1>Snappy Snips</h1>
+    <img src="/img/hero-image.jpg" class="hero-image">
   </div>
