--- a/HairSalon/wwwroot/css/styles.css
+++ b/HairSalon/wwwroot/css/styles.css
@@ -1,19 +1,40 @@
+body {
+    font-family: 'Gloria Hallelujah', cursive;
+}
+
 .container {
     width: 70%;
     max-width: 800px;
 }
 
+.navbar-default .navbar-brand {
+    font-size: 1.8em;
+    color: #585757;
+}
+
 h1 {
     margin: 30px 0px;
+    border-bottom: 10px solid #444;
+    padding-bottom: 10px;
+}
+
+.hero-image {
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 800px;
+    box-shadow: 2px 2px 10px #000;
+    border-radius: 3px;
 }
 
 .grid-container {
     display: grid;
-    grid-template-columns: 2fr 1fr 1fr 1fr;
+    grid-template-columns: 2fr 0.45fr 0.33fr 0.33fr;
     padding: 10px;
     margin: 20px auto;
     border: 1px solid #e0dddd;
     border-radius: 5px;
+    font-size: 1em;
 }
 
 .grid-item {
@@ -54,4 +75,12 @@ h1 {
 .specialty-icon {
     width: 25px;
     margin-right: 20px;
+}
+
+/* responsive styles */
+
+@media screen and (max-width: 800px) {
+    .container {
+        width: 100%;
+    }
 }
