--- a/HairSalon/Views/Clients/Index.cshtml
+++ b/HairSalon/Views/Clients/Index.cshtml
@@ -8,6 +8,10 @@
 <div class="container">
     <h1>Clients</h1>
     @Html.ActionLink("Add Client", "Create", "Clients", null, new { @class="btn btn-lg btn-info" })
+    @using (Html.BeginForm("delete", "Clients", FormMethod.Post, new { @class="inline" }))
+    {
+        <button type="submit" class="btn btn-lg btn-danger">Delete All</button>
+    }
     @if (Model.Count() > 0)
     {
         <div class="grid-container">
