--- a/HairSalon/Views/Clients/Show.cshtml
+++ b/HairSalon/Views/Clients/Show.cshtml
@@ -11,7 +11,7 @@
     <p>Email: @Model.Email</p>
     <p>Phone: @Model.Phone</p>
     <p>Stylist: 
-        @if (@Viewbag.Stylist != null)
+        @if (@ViewBag.Stylist != null)
         {
             <a href="/stylists/@ViewBag.Stylist.StylistId">@ViewBag.Stylist.FirstName @ViewBag.Stylist.LastName</a>
         }
