Fix display typo on edit pages for Client and Specialty

--- a/HairSalon/Views/Clients/Edit.cshtml
+++ b/HairSalon/Views/Clients/Edit.cshtml
@@ -36,7 +36,7 @@
             @Html.DropDownList("StylistId", null, "Select a Stylist", new { @class = "form-control", required = "true" })
             <span asp-validation-for="StylistId" class="text-danger"></span>
         </div>
-        <button type="submit" class="btn btn-lg btn-info">Create Client</button>
+        <button type="submit" class="btn btn-lg btn-info">Update Client</button>
         <a href="/clients" class="btn btn-lg btn-info">Back</a>
     }
 </div>
