--- a/HairSalon/Views/Specialties/Edit.cshtml
+++ b/HairSalon/Views/Specialties/Edit.cshtml
@@ -23,7 +23,7 @@
                 @Html.DropDownList("StylistIds", null, new { multiple = "true", @class = "form-control" })
             </div>
         }
-        <button type="submit" class="btn btn-lg btn-info">Create Specialty</button>
+        <button type="submit" class="btn btn-lg btn-info">Update Specialty</button>
         <a href="/specialties" class="btn btn-lg btn-info">Back</a>
     }
 </div>
